--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/DiscoverBannerItemCard.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/DiscoverBannerItemCard.module.css
@@ -31,7 +31,9 @@
 .cards {
   position: absolute;
   z-index: 1;
-  transition: translate 300ms cubic-bezier(0.66, 0, 0.11, 0.95), filter 300ms;
+  transition:
+    translate 300ms cubic-bezier(0.66, 0, 0.11, 0.95),
+    filter 300ms;
   height: 20%;
   width: 8.4375%;
 }
@@ -78,7 +80,7 @@
   font-size: 14px;
 }
 
-.cardName p {
+.cardNameText {
   padding: 0 10px;
 }
 
