--- a/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
@@ -1,65 +1,62 @@
 .freeGame {
-    cursor: pointer;
-    position: relative;
-    transition: filter 300ms;
-    flex: 0 1 auto;
-    margin-top: 20px;
+  cursor: pointer;
+  transition: filter 300ms;
+  margin-top: 20px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
 }
 
 .gameHeader {
-    width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .gameHeader img {
-    border-radius: 5px 5px 0 0;
-    width: 100%;
-    aspect-ratio: 1/1.4;
-}
-
-.gameDetail {
-    padding-bottom: 2rem;
-}
-
-.gameDetail p {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+  border-radius: 5px 5px 0 0;
+  width: 100%;
+  aspect-ratio: 1/1.4;
 }
 
 .freeNow {
-    background-color: rgb(0, 116, 228);
+  background-color: rgb(0, 116, 228);
 }
 
 .coming {
-    background-color: #000;
+  background-color: #000;
 }
 
 .common {
-    margin: -5px 0;
-    font-size: 12px;
-    text-align: center;
-    padding: 10px 0;
-    border-radius: 0 0 5px 5px;
+  font-size: 12px;
+  text-align: center;
+  padding: 10px 0;
+  border-radius: 0 0 5px 5px;
+}
+.gameDetail {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
 }
 .date {
-    position: absolute;
-    color: rgb(173, 173, 173);
-    bottom: 0;
+  color: rgb(173, 173, 173);
+  flex-grow: 0;
 }
 .name {
-    font-size: 14px;
-    margin-top: 10px;
+  margin-top: 10px;
+  flex-grow: 1;
+}
+.gameDetail p {
+  font-size: 14px;
+}
+@media only screen and (min-width: 1600px) {
+  .gameDetail p {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (max-width: 352px) {
-    .gameDetail {
-        padding-bottom: 3rem;
-    }
-}
-@media only screen and (min-width: 1600px) {
-    .name {
-        font-size: 16px;
-    }
+  .gameDetail p {
+    font-size: 12px;
+  }
 }
