--- a/src/Shared/Card/Card.module.css
+++ b/src/Shared/Card/Card.module.css
@@ -5,7 +5,7 @@
 
 .name {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 16px;
   margin-top: 1rem;
   margin-bottom: 1rem;
   overflow: hidden;
@@ -29,4 +29,10 @@
   width: 100%;
   position: absolute;
   bottom: 0;
+}
+
+@media screen and (max-width: 1600px) {
+  .name {
+    font-size: 14px;
+  }
 }
