--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGameColumn/EventGamesGameInColumn.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/Components/EventGamesGameColumn/EventGamesGameInColumn.module.css
@@ -1,58 +1,55 @@
 .GameColumn {
-    display: flex;
-    transition: background-color 300ms;
-    padding: 5px;
-    cursor: pointer;
-    justify-content: stretch;
-    align-items: stretch;
-    align-content: stretch;
-    width: 100%;
-    aspect-ratio: 2.53/1;
+  display: flex;
+  transition: background-color 300ms;
+  padding: 5px;
+  cursor: pointer;
+  justify-content: stretch;
+  align-items: stretch;
+  width: 100%;
+  aspect-ratio: 2.53/1;
 }
 
 .GameColumn:hover {
-    background-color: rgba(75, 75, 75, 0.473);
+  background-color: rgba(75, 75, 75, 0.473);
 }
 .gameImage {
-    width: 30%;
-    padding: 5px;
+  width: 30%;
+  padding: 5px;
 }
 
 .image {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .image img {
-    height: 100%;
-    aspect-ratio: 0.0708502024/1;
-    object-fit: cover;
+  height: 100%;
+  aspect-ratio: 0.0708502024/1;
+  object-fit: cover;
 }
 
 .gameDetails {
-    width: 70%;
-    margin-left: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+  width: 70%;
+  margin-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .name {
-    font-size: 14px;
-    font-weight: 400;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 @media only screen and (max-width: 768px) {
-    .GameColumn {
-        padding: 0.1rem;
-    }
+  .GameColumn {
+    padding: 0.1rem;
+  }
+  .gameDetails {
+    margin-left: 0.5rem;
+  }
 }
 @media only screen and (min-width: 1600px) {
-    .name {
-        font-size: 16px;
-    }
+  .name {
+    font-size: 16px;
+  }
 }
