(browse) text weight updated

--- a/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/FilterOptions/FilterOptions/FilterOptions.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/FilterOptions/FilterOptions/FilterOptions.module.css
@@ -2,11 +2,19 @@
   margin-bottom: 3rem;
 }
 .filterTitle {
+  width: 100%;
+  background-color: transparent;
+  border: none;
   position: relative;
   cursor: pointer;
   transition: filter 200ms;
   user-select: none;
   -webkit-user-select: none;
+  text-align: left;
+}
+.title {
+  color: rgb(207, 207, 207);
+  font-weight: 400;
 }
 
 .downArrow {
