--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/SortContainer.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/SortContainer.module.css
@@ -7,7 +7,9 @@
   position: absolute;
   width: 100%;
 }
-
+.sortByText {
+  font-weight: 400;
+}
 @media only screen and (max-width: 768px) {
   .sortContainer {
     width: 100%;
