--- a/src/Pages/MainContent/Pages/Browse/Components/FilterGames/FilterGames/FilterGames.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/FilterGames/FilterGames/FilterGames.module.css
@@ -2,7 +2,9 @@
   width: 25%;
   padding: 10px 15px 0 0;
 }
-
+.filterText {
+  font-weight: 400;
+}
 @media only screen and (max-width: 864px) and (min-width: 769px) {
   .FilterGames {
     width: 30%;
