--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/IndiGameDetails/IndiGameDetails.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/IndiGameDetails/IndiGameDetails.module.css
@@ -1,10 +1,24 @@
 .individualGameDetails {
-  width: 70%;
+  width: 100%;
   padding: 20px 0px 0px;
 }
+.indiGameMainDetail {
+  width: 70%;
+  flex-shrink: 0;
+}
+.mainContentContainer {
+  display: flex;
+  gap: 0 4rem;
+}
+
+@media (max-width: 768px) {
+  .mainContentContainer {
+    flex-direction: column-reverse;
+  }
+}
+
 @media (max-width: 768px) {
   .individualGameDetails {
     width: 100%;
-    padding: 20px 0px 0px;
   }
 }
