--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
@@ -1,6 +1,5 @@
 .imageContainer {
-  padding: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
 }
 .imageContainer img {
   width: 100%;
@@ -11,43 +10,28 @@
   font-weight: 400;
 }
 .price {
-  margin: 10px 0;
+  margin: 0.5rem 0;
 }
 
-@media screen and (max-width: 1600px) and (min-width: 1200px) {
+@media screen and (max-width: 1600px) and (min-width: 900px) {
   .imageContainer {
-    padding: 15px;
-    margin-bottom: 15px;
-  }
-  .name {
-    font-size: 1.5rem;
-  }
-  .price {
-    margin: 8px 0;
+    margin-bottom: 1rem;
   }
 }
 @media screen and (max-width: 1200px) and (min-width: 900px) {
-  .imageContainer {
-    padding: 10px;
-    margin-bottom: 0;
-  }
   .name {
     font-size: 1.2rem;
-  }
-  .price {
-    margin: 6px 0;
   }
 }
 
 @media screen and (max-width: 900px) {
   .imageContainer {
-    padding: 5px;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
   }
   .name {
     font-size: 1rem;
   }
   .price {
-    margin: 4px 0;
+    margin: 0.3rem 0;
   }
 }
