--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/IndiGameDetails/IndiGameDetails.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/IndiGameDetails/IndiGameDetails.module.css
@@ -2,23 +2,51 @@
   width: 100%;
   padding: 20px 0px 0px;
 }
-.indiGameMainDetail {
-  width: 70%;
-  flex-shrink: 0;
-}
 .mainContentContainer {
   display: flex;
   gap: 0 4rem;
+}
+.indiGameMainDetail {
+  width: calc(100% - 320px - 4rem);
+  flex-grow: 1;
+}
+.asideDetail {
+  width: 320px;
+  display: flex;
+}
+
+@media only screen and (max-width: 1280px) {
+  .mainContentContainer {
+    gap: 0 1.5rem;
+  }
+  .indiGameMainDetail {
+    width: calc(100% - 260px - 1.5rem);
+  }
+  .asideDetail {
+    width: 260px;
+  }
+}
+@media only screen and (max-width: 1023px) {
+  .mainContentContainer {
+    gap: 0 2rem;
+  }
+  .indiGameMainDetail {
+    width: calc(100% - 256px - 2rem);
+  }
+  .asideDetail {
+    width: 256px;
+  }
 }
 
 @media (max-width: 768px) {
   .mainContentContainer {
     flex-direction: column-reverse;
+    gap: 4rem 0;
   }
-}
-
-@media (max-width: 768px) {
-  .individualGameDetails {
+  .indiGameMainDetail {
+    width: 100%;
+  }
+  .asideDetail {
     width: 100%;
   }
 }
