--- a/src/Pages/MainContent/Pages/IndiGame/IndiGame/IndiGame.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/IndiGame/IndiGame.module.css
@@ -1,3 +1,24 @@
 .individualGame {
   width: 100%;
+  padding: 20px 0px 0px;
+}
+.reviewContainer {
+  width: calc(100% - 320px - 4rem);
+}
+
+@media only screen and (max-width: 1280px) {
+  .reviewContainer {
+    width: calc(100% - 260px - 1.5rem);
+  }
+}
+@media only screen and (max-width: 1023px) {
+  .reviewContainer {
+    width: calc(100% - 256px - 2rem);
+  }
+}
+
+@media (max-width: 768px) {
+  .reviewContainer {
+    width: 100%;
+  }
 }
