--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/IndiGameReviewSection/IndiGameReviewSection.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/IndiGameReviewSection/IndiGameReviewSection.module.css
@@ -3,7 +3,8 @@
 }
 .reviewContainer {
   background: #252525;
-  padding: 60px 90px;
+  padding: 60px 90px 0 90px;
+  overflow: auto;
 }
 .reviewMainHeader {
   margin-bottom: 10px;
@@ -12,12 +13,12 @@
 
 @media only screen and (max-width: 1252px) and (min-width: 616px) {
   .reviewContainer {
-    padding: 50px 30px;
+    padding: 50px 30px 0 30px;
   }
 }
 
 @media only screen and (max-width: 615px) {
   .reviewContainer {
-    padding: 10px;
+    padding: 10px 10px 0 10px;
   }
 }
