--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/IndiGameDetailAside/IndiGameDetailAside.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/IndiGameDetailAside/IndiGameDetailAside.module.css
@@ -1,7 +1,9 @@
 .individualGameDetailAside {
   width: 100%;
 }
-.asideContainer {
-  position: sticky;
-  top: 7rem;
+@media only screen and (min-width: 768px) {
+  .asideContainer {
+    position: sticky;
+    top: 7rem;
+  }
 }
