--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameTakeReview/Components/IndiGameWriteReview/IndiGameWriteReview/IndiGameWriteReview.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameTakeReview/Components/IndiGameWriteReview/IndiGameWriteReview/IndiGameWriteReview.module.css
@@ -45,8 +45,13 @@
 }
 .writingField {
   width: 80%;
-  padding-bottom: 40px;
   position: relative;
+}
+
+@media only screen and (max-width: 265px) {
+  .individualGameWriteReview {
+    padding: 0.5rem;
+  }
 }
 
 @media only screen and (max-width: 512px) {
@@ -59,7 +64,6 @@
   }
   .writingField {
     width: 100%;
-    padding-bottom: 40px;
   }
 }
 @media only screen and (max-width: 376px) {
@@ -68,6 +72,5 @@
   }
   .writingField {
     width: 100%;
-    padding-bottom: 80px;
   }
 }
