--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideBody/Components/IndiGameAsideBodyBtn/IndiGameAsideBodyBtn.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideBody/Components/IndiGameAsideBodyBtn/IndiGameAsideBodyBtn.module.css
@@ -1,57 +1,60 @@
-.individualGameAsideBody {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-}
-
 .btn {
   text-transform: uppercase;
   border-radius: 4px;
   border: none;
 }
-.cartBtn {
-  padding: 20px;
-  font-size: 1rem;
+.buyNow {
   background-color: rgb(0, 116, 228);
+  padding: 20px 0;
   color: white;
+  font-size: 1rem;
   cursor: pointer;
   transition: background-color 200ms;
+  position: relative;
+}
+
+.buyNow:hover {
+  background-color: rgb(27, 135, 236);
+}
+
+.cartBtn {
+  margin-top: 1rem;
+  background-color: transparent;
+  border: 1px solid rgb(245, 245, 245);
+  padding: 10px 0;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 200ms;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
 
-.cartBtn:disabled {
-  background-color: rgba(0, 118, 228, 0.6);
-  color: rgba(255, 255, 255, 0.6);
-  cursor: default;
-}
-
 .cartBtn svg {
   width: 20px;
   margin-right: 5px;
 }
-.cartBtn:hover {
-  background-color: rgb(27, 135, 236);
-}
 
-.cartBtn:disabled:hover {
-  background-color: rgba(0, 118, 228, 0.6);
+.cartBtn:disabled {
+  color: rgba(255, 255, 255, 0.6);
+  cursor: default;
 }
 
 .wishlistBtn {
   padding: 10px 0;
   font-size: 12px;
-  margin-top: 10px;
-  background-color: black;
+  margin: 1rem 0;
+  background-color: transparent;
+  border: 1px solid rgb(245, 245, 245);
   display: flex;
   color: white;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   transition: background-color 200ms;
-  margin-bottom: 10px;
   position: relative;
 }
 
@@ -77,16 +80,8 @@
 .outerCircle svg {
   width: 10px;
 }
-
 .rotate {
   animation: 1500ms cubic-bezier(0.4, 0, 0.1, 1) 0s infinite normal none running rotate;
-}
-
-.wishlistBtn:hover .outerCircle {
-  background-color: rgb(18, 18, 18);
-}
-.wishlistBtn:active .outerCircle {
-  background-color: rgb(59, 59, 59);
 }
 
 .plus {
@@ -116,44 +111,6 @@
 .plus:before {
   rotate: 90deg;
 }
-
-.gameInfo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 0;
-  position: relative;
-  gap: 1rem;
-}
-
-.key {
-  word-wrap: break-word;
-}
-
-.gameInfo:not(:last-child)::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: rgba(255, 255, 255, 0.6);
-}
-
-.logos {
-  display: flex;
-}
-
-.value {
-  text-align: right;
-  word-wrap: break-word;
-}
-
-.logos svg {
-  width: 20px;
-  margin: 0 5px;
-}
-
 @keyframes rotate {
   0% {
     rotate: 0deg;
@@ -223,12 +180,5 @@
   .plus:after {
     height: 5px;
     width: 2px;
-  }
-}
-
-@media only screen and (max-width: 275px) {
-  .value,
-  .key {
-    font-size: 0.8rem;
   }
 }
