--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesHeader/AllGamesHeader.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGames/Components/AllGamesHeader/AllGamesHeader.module.css
@@ -1,32 +1,32 @@
 .headerText {
-  padding: 1rem 0;
+	padding: 1rem 0;
 }
-.headerText h2 {
-  font-weight: 400;
-  font-size: 2rem;
+.headerText {
+	font-weight: 400;
+	font-size: 2rem;
 }
 .searchFieldContainer {
-  height: 40px;
+	height: 40px;
 }
 .allGamesHeader {
-  margin-bottom: 2rem;
+	margin-bottom: 2rem;
 }
 .searchField {
-  position: relative;
-  z-index: 1;
+	position: relative;
+	z-index: 1;
 }
 .searchShow {
-  z-index: 3;
+	z-index: 3;
 }
 .shadow {
-  position: absolute;
-  visibility: hidden;
-  width: 100%;
-  height: 100vh;
-  top: -1rem;
-  z-index: 2;
-  overflow: hidden;
+	position: absolute;
+	visibility: hidden;
+	width: 100%;
+	height: 100vh;
+	top: -1rem;
+	z-index: 2;
+	overflow: hidden;
 }
 .shadowShow {
-  visibility: visible;
+	visibility: visible;
 }
