--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -1,231 +1,231 @@
 .drawerContainer {
-  position: relative;
-  width: 240px;
-  height: calc(100vh - 72px);
-  background-color: #18181c;
+	position: relative;
+	width: 240px;
+	height: calc(100vh - 72px);
+	background-color: #18181c;
 }
 .containerTransition {
-  transition: width 300ms linear;
+	transition: width 300ms linear;
 }
 .drawerImmediateContainer {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	overflow: hidden;
 }
 .drawerScrollContainer {
-  margin-top: 3rem;
-  position: relative;
-  height: calc(100% - 3rem);
+	margin-top: 3rem;
+	position: relative;
+	height: calc(100% - 3rem);
 }
 .containerCollapse {
-  width: 3.2rem;
+	width: 3.2rem;
 }
 
 .drawer {
-  width: 240px;
-  height: calc(100vh - 72px - 3rem);
-  overflow-y: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+	width: 240px;
+	height: calc(100vh - 72px - 3rem);
+	overflow-y: scroll;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
-.scrollDrawer::-webkit-scrollbar {
-  display: none;
+.drawer::-webkit-scrollbar {
+	display: none;
 }
 .optionContainer {
-  flex-grow: 1;
-  list-style-type: none;
-  width: 100%;
+	flex-grow: 1;
+	list-style-type: none;
+	width: 100%;
 }
 
 .expandedPosition {
-  right: -1rem;
+	right: -1rem;
 }
 
 .collapsePosition {
-  right: 0.65rem;
+	right: 0.65rem;
 }
 
 .collapseButton {
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  top: 0;
-  cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.2);
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
-  z-index: 2;
+	width: 2rem;
+	height: 2rem;
+	position: absolute;
+	top: 0;
+	cursor: pointer;
+	background-color: rgba(255, 255, 255, 0.2);
+	border: none;
+	border-radius: 50%;
+	box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
+	z-index: 2;
 }
 .containerTransition .collapseButton {
-  transition: right 300ms linear;
+	transition: right 300ms linear;
 }
 
 .arrowBtn {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .arrowBtn::before {
-  content: '';
-  position: absolute;
-  top: 12px;
-  transform-origin: center;
-  translate: 0 -2px;
-  width: 50%;
-  height: 2px;
-  background-image: linear-gradient(to left, #8200ff, #df00ff);
-  border-radius: 0.5rem;
-  rotate: -45deg;
+	content: '';
+	position: absolute;
+	top: 12px;
+	transform-origin: center;
+	translate: 0 -2px;
+	width: 50%;
+	height: 2px;
+	background-image: linear-gradient(to left, #8200ff, #df00ff);
+	border-radius: 0.5rem;
+	rotate: -45deg;
 }
 
 .containerTransition .arrowBtn::before {
-  transition: rotate 300ms linear;
+	transition: rotate 300ms linear;
 }
 
 .arrowBtn::after {
-  content: '';
-  position: absolute;
-  transform-origin: center;
-  top: 22px;
-  width: 50%;
-  height: 2px;
-  translate: 0 -2px;
-  background-image: linear-gradient(to left, #8200ff, #df00ff);
-  rotate: 45deg;
-  border-radius: 0.5rem;
+	content: '';
+	position: absolute;
+	transform-origin: center;
+	top: 22px;
+	width: 50%;
+	height: 2px;
+	translate: 0 -2px;
+	background-image: linear-gradient(to left, #8200ff, #df00ff);
+	rotate: 45deg;
+	border-radius: 0.5rem;
 }
 
 .containerTransition .arrowBtn::after {
-  transition: rotate 300ms linear;
+	transition: rotate 300ms linear;
 }
 
 .collapsePosition .arrowBtn::before {
-  rotate: 45deg;
-  background-image: linear-gradient(to right, #8200ff, #df00ff);
+	rotate: 45deg;
+	background-image: linear-gradient(to right, #8200ff, #df00ff);
 }
 .collapsePosition .arrowBtn::after {
-  rotate: -45deg;
-  background-image: linear-gradient(to right, #8200ff, #df00ff);
+	rotate: -45deg;
+	background-image: linear-gradient(to right, #8200ff, #df00ff);
 }
 
 .footer {
-  margin-top: 2rem;
-  padding: 0 1rem;
-  width: 100%;
-  height: 81px;
-  flex-shrink: 0;
-  padding-bottom: 1rem;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
+	margin-top: 2rem;
+	padding: 0 1rem;
+	width: 100%;
+	height: 81px;
+	flex-shrink: 0;
+	padding-bottom: 1rem;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
 }
 
 .containerTransition .footer {
-  transition:
-    opacity 200ms,
-    height 200ms 0ms,
-    margin-top 200ms 0ms;
+	transition:
+		opacity 200ms,
+		height 200ms 0ms,
+		margin-top 200ms 0ms;
 }
 
 .footerHide {
-  opacity: 0;
-  height: 0px;
-  margin-top: 0;
+	opacity: 0;
+	height: 0px;
+	margin-top: 0;
 }
 .containerTransition .footerHide {
-  transition:
-    opacity 200ms,
-    height 0ms 200ms,
-    margin-top 0ms 200ms;
+	transition:
+		opacity 200ms,
+		height 0ms 200ms,
+		margin-top 0ms 200ms;
 }
 .footerLinks {
-  list-style: none;
-  font-size: 12px;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0 1rem;
+	list-style: none;
+	font-size: 12px;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 0 1rem;
 }
 .footerLink {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.4);
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.4);
 }
 
 .footerCopyWrite {
-  margin-top: 5px;
-  color: rgba(255, 255, 255, 0.4);
-  font-size: 12px;
+	margin-top: 5px;
+	color: rgba(255, 255, 255, 0.4);
+	font-size: 12px;
 }
 
 .gamologyText {
-  background: linear-gradient(to right, #8300ff, #b000ff, #dc00ff);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: 600;
+	background: linear-gradient(to right, #8300ff, #b000ff, #dc00ff);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-weight: 600;
 }
 
 @media only screen and (max-width: 1099px) {
-  .drawerContainer {
-    position: absolute;
-    top: 72px;
-    left: 0;
-    max-width: 240px;
-    width: 100%;
-    height: calc(100vh - 72px);
-    background-color: #18181c;
-    z-index: 2;
-    transform-origin: 0 0;
-    translate: -100%;
-  }
-  .containerTransition {
-    transition: translate 300ms linear;
-  }
-  .arrowBtn::before {
-    rotate: 45deg;
-    background-image: linear-gradient(to right, #8200ff, #df00ff);
-  }
-  .arrowBtn::after {
-    rotate: -45deg;
-    background-image: linear-gradient(to right, #8200ff, #df00ff);
-  }
-  .collapsePosition .arrowBtn::before {
-    rotate: -45deg;
-    background-image: linear-gradient(to left, #8200ff, #df00ff);
-  }
-  .collapsePosition .arrowBtn::after {
-    rotate: 45deg;
-    background-image: linear-gradient(to left, #8200ff, #df00ff);
-  }
-  .drawer {
-    width: 100%;
-  }
-  .containerCollapse {
-    width: 100%;
-    translate: 0%;
-  }
+	.drawerContainer {
+		position: absolute;
+		top: 72px;
+		left: 0;
+		max-width: 240px;
+		width: 100%;
+		height: calc(100vh - 72px);
+		background-color: #18181c;
+		z-index: 2;
+		transform-origin: 0 0;
+		translate: -100%;
+	}
+	.containerTransition {
+		transition: translate 300ms linear;
+	}
+	.arrowBtn::before {
+		rotate: 45deg;
+		background-image: linear-gradient(to right, #8200ff, #df00ff);
+	}
+	.arrowBtn::after {
+		rotate: -45deg;
+		background-image: linear-gradient(to right, #8200ff, #df00ff);
+	}
+	.collapsePosition .arrowBtn::before {
+		rotate: -45deg;
+		background-image: linear-gradient(to left, #8200ff, #df00ff);
+	}
+	.collapsePosition .arrowBtn::after {
+		rotate: 45deg;
+		background-image: linear-gradient(to left, #8200ff, #df00ff);
+	}
+	.drawer {
+		width: 100%;
+	}
+	.containerCollapse {
+		width: 100%;
+		translate: 0%;
+	}
 
-  .expandedPosition {
-    right: -1.6rem;
-  }
+	.expandedPosition {
+		right: -1.6rem;
+	}
 
-  .collapsePosition {
-    right: 0.65rem;
-  }
+	.collapsePosition {
+		right: 0.65rem;
+	}
 
-  .shadow {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
+	.shadow {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 1;
+	}
 }
