--- a/src/Shared/Card/Card.module.css
+++ b/src/Shared/Card/Card.module.css
@@ -1,38 +1,33 @@
-.cardImg {
-  width: 100%;
-  aspect-ratio: 0.7/1;
+.card {
+	width: 100%;
+	padding: 0 0 20px 0;
+	flex: 0 0 auto;
+	display: flex;
+	flex-direction: column;
+	transition: filter 300ms;
 }
 
 .name {
-  font-weight: 500;
-  font-size: 16px;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+	font-weight: 500;
+	font-size: 16px;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	flex-grow: 1;
 }
 
-.card {
-  width: 100%;
-  position: relative;
-  padding: 0 0 20px 0;
-  flex: 0 0 auto;
-  transition: filter 300ms;
+.cardImg {
+	width: 100%;
+	aspect-ratio: 0.7/1;
 }
 .card img {
-  border-radius: 5px;
+	border-radius: 5px;
 }
 .price {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
+	width: 100%;
 }
 
 @media screen and (max-width: 1600px) {
-  .name {
-    font-size: 14px;
-  }
+	.name {
+		font-size: 14px;
+	}
 }
