--- a/src/Pages/Dashboard/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard/Dashboard.module.css
@@ -1,6 +1,6 @@
 .dashboard {
-  width: 100%;
-  height: calc(100vh - 72px);
-  display: flex;
-  gap: 1rem;
+	width: 100%;
+	height: calc(100vh - 72px);
+	display: flex;
+	column-gap: 1rem;
 }
