--- a/src/Pages/MainContent/Pages/Browse/Browse/Browse.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Browse/Browse.module.css
@@ -3,17 +3,17 @@
 }
 .mainContent {
 	display: flex;
-	gap: 3rem;
+	column-gap: 3rem;
 }
 
 @media only screen and (max-width: 1199px) and (min-width: 769px) {
 	.mainContent {
-		gap: 1rem;
+		column-gap: 1rem;
 	}
 }
 
 @media only screen and (max-width: 768px) {
 	.mainContent {
-		gap: 0;
+		column-gap: 0;
 	}
 }
