--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverGames/Components/DiscoverGamesButtons/DiscoverGamesButtons.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverGames/Components/DiscoverGamesButtons/DiscoverGamesButtons.module.css
@@ -1,52 +1,42 @@
 .Buttons {
-  position: absolute;
-  left: calc(100% - 2rem * 3);
-  top: 0;
+	display: flex;
+	gap: 1rem;
 }
 
 .btn:disabled {
-  border: 1px solid rgb(41, 41, 41);
-  cursor: default;
+	border: 1px solid rgb(41, 41, 41);
+	cursor: default;
 }
 
 .btn:disabled svg {
-  fill: rgb(36, 36, 36);
-  cursor: default;
+	fill: rgb(36, 36, 36);
+	cursor: default;
 }
 
 .btn:disabled svg {
-  fill: rgb(36, 36, 36);
+	fill: rgb(36, 36, 36);
 }
 
 .btn {
-  width: 2rem;
-  height: 2rem;
-  position: absolute;
-  border: 1px solid rgb(92, 92, 92);
-  padding: 0.5rem;
-  border-radius: 50%;
-  cursor: pointer;
+	width: 2rem;
+	height: 2rem;
+	border: 1px solid rgb(92, 92, 92);
+	padding: 0.5rem;
+	border-radius: 50%;
+	cursor: pointer;
 }
 
 .btn:active:enabled {
-  background-color: rgb(58, 58, 58);
+	background-color: rgb(58, 58, 58);
 }
 
 .nextBtn {
-  rotate: -90deg;
+	rotate: -90deg;
 }
 
 .prevBtn {
-  rotate: 90deg;
-  translate: 200% 0;
+	rotate: 90deg;
 }
 
 @media only screen and (max-width: 768px) {
-  .Buttons {
-    left: calc(100% - 1.5rem * 3);
-  }
-
-  .prevBtn {
-    translate: 110% 0;
-  }
 }
