--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
@@ -1,24 +1,24 @@
 .EventGamesContainer {
-  margin-bottom: 3rem;
-  width: 100%;
-  max-width: 1600px;
+	margin-bottom: 3rem;
+	width: 100%;
+	max-width: 1600px;
 }
 .EventGames {
-  width: 100%;
-  display: flex;
-  gap: 1rem;
-  list-style: none;
+	width: 100%;
+	display: flex;
+	column-gap: 1rem;
+	list-style: none;
 }
 
 @media only screen and (max-width: 768px) {
-  .EventGamesContainer {
-    overflow: hidden;
-  }
-  .EventGames {
-    width: 100%;
-    left: 5px;
-    transition: translate 400ms;
-    position: relative;
-    gap: 0rem;
-  }
+	.EventGamesContainer {
+		overflow: hidden;
+	}
+	.EventGames {
+		width: 100%;
+		left: 5px;
+		transition: translate 400ms;
+		position: relative;
+		column-gap: 0rem;
+	}
 }
