--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideBody/IndiGameAsideBody/IndiGameAsideBody.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideBody/IndiGameAsideBody/IndiGameAsideBody.module.css
@@ -1,56 +1,56 @@
 .individualGameAsideBody {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
+	display: flex;
+	flex-direction: column;
+	margin-top: 20px;
 }
 
 .wishlistBtn:hover .outerCircle {
-  background-color: rgb(18, 18, 18);
+	background-color: rgb(18, 18, 18);
 }
 .wishlistBtn:active .outerCircle {
-  background-color: rgb(59, 59, 59);
+	background-color: rgb(59, 59, 59);
 }
 
 .gameInfo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 0;
-  position: relative;
-  gap: 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px 0;
+	position: relative;
+	column-gap: 1rem;
 }
 
 .key {
-  word-wrap: break-word;
+	word-wrap: break-word;
 }
 
 .gameInfo:not(:last-child)::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: rgba(255, 255, 255, 0.6);
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 1px;
+	background-color: rgba(255, 255, 255, 0.6);
 }
 
 .logos {
-  display: flex;
+	display: flex;
 }
 
 .value {
-  text-align: right;
-  word-wrap: break-word;
+	text-align: right;
+	word-wrap: break-word;
 }
 
 .logos svg {
-  width: 20px;
-  margin: 0 5px;
+	width: 20px;
+	margin: 0 5px;
 }
 
 @media only screen and (max-width: 275px) {
-  .value,
-  .key {
-    font-size: 0.8rem;
-  }
+	.value,
+	.key {
+		font-size: 0.8rem;
+	}
 }
