--- a/src/Shared/DiscountPrice/DiscountPrice.module.css
+++ b/src/Shared/DiscountPrice/DiscountPrice.module.css
@@ -1,15 +1,15 @@
 .DiscountPrice {
-  width: 100%;
-  height: 100%;
-  color: rgb(226, 226, 226);
-  text-align: right;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 0 5px;
+	width: 100%;
+	height: 100%;
+	color: rgb(226, 226, 226);
+	text-align: right;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	column-gap: 5px;
 }
 
 .regular {
-  color: rgb(145, 145, 145);
-  display: inline-block;
+	color: rgb(145, 145, 145);
+	display: inline-block;
 }
