--- a/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGames/FreeGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGames/FreeGames.module.css
@@ -54,6 +54,12 @@
 	margin-right: 1rem;
 }
 
+@media only screen and (max-width: 1023px) {
+	.freeGames {
+		border-radius: 0;
+	}
+}
+
 @media only screen and (max-width: 768px) {
 	.games4 {
 		grid-template-columns: repeat(2, 1fr);
@@ -68,9 +74,15 @@
 		gap: 1rem;
 	}
 }
-@media only screen and (max-width: 322px) {
+
+@media only screen and (max-width: 399px) {
+	.games3 {
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
+
+@media only screen and (max-width: 325px) {
 	.games4,
-	.games3,
 	.games2 {
 		grid-template-columns: repeat(1, 1fr);
 	}
