--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AddTags/Components/TagsContainer/TagsContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AddTags/Components/TagsContainer/TagsContainer.module.css
@@ -1,9 +1,15 @@
 .tagsContainer {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 10px;
+	gap: 2rem;
 	margin-top: 10px;
 }
 .tag {
 	flex-grow: 1;
+	min-width: 230px;
+}
+@media only screen and (max-width: 264px) {
+	.tag {
+		min-width: 100%;
+	}
 }
