--- a/src/Shared/ScrollBar/ScrollBar.module.css
+++ b/src/Shared/ScrollBar/ScrollBar.module.css
@@ -22,6 +22,7 @@
 	outline: 0;
 	border: 0;
 	user-select: none;
+	pointer-events: none;
 	opacity: 0;
 	transition:
 		background-color 200ms,
@@ -32,4 +33,5 @@
 }
 .show {
 	opacity: 1;
+	pointer-events: auto;
 }
