(dashboard-editTags) component name Changed

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/SingleTag/SingleTag.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/SingleTag/SingleTag.module.css
@@ -31,6 +31,9 @@
 .crossBtn:hover {
 	background-color: #ffffff48;
 }
+.crossBtn:active {
+	background-color: #42424248;
+}
 .cross {
 	position: relative;
 	display: inline-block;
