(dashboard-editTags) add tag/category ui added

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/TagsContainer/TagsContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/TagsContainer/TagsContainer.module.css
@@ -8,6 +8,10 @@
 	flex-grow: 1;
 	min-width: 230px;
 }
+.tagHeader {
+	font-weight: 400;
+	margin: 1rem 0;
+}
 @media only screen and (max-width: 264px) {
 	.tag {
 		min-width: 100%;
