--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/SingleTag/SingleTag.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/SingleTag/SingleTag.module.css
@@ -4,14 +4,13 @@
 	position: relative;
 }
 .tagListItem:not(:last-child)::after {
-	content: ' ';
+	content: '';
 	position: absolute;
 	width: 100%;
 	height: 1px;
 	background-color: rgba(255, 255, 255, 0.3);
 	left: 0;
 	bottom: 0;
-	transition: background-color 200ms;
 }
 .tagItem {
 	flex-grow: 1;
@@ -26,13 +25,13 @@
 	border-radius: 50%;
 	overflow: hidden;
 	cursor: pointer;
-	transition: background-color 200ms;
+	transition: background-color 100ms;
 }
 .crossBtn:hover {
-	background-color: #ffffff48;
+	background-color: rgba(255, 255, 255, 0.13);
 }
 .crossBtn:active {
-	background-color: #42424248;
+	background-color: #42424200;
 }
 .cross {
 	position: relative;
