(errorMessage) resonsiveness Updated

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/AddTags/AddTags/AddTags.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/AddTags/AddTags/AddTags.module.css
@@ -24,3 +24,8 @@
 	cursor: pointer;
 	position: relative;
 }
+@media only screen and (max-width: 200px) {
+	.selectionField {
+		width: 100%;
+	}
+}
