--- a/src/Shared/ErrorMessage/ErrorMessage.module.css
+++ b/src/Shared/ErrorMessage/ErrorMessage.module.css
@@ -1,46 +1,59 @@
-#hide {
-  animation: hide 200ms linear forwards 1;
+.errorMessageContainer {
+	--error-message-height: 0;
 }
+.errorMessageContainer {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	animation: height-animation 200ms linear forwards;
+	animation-duration: 200ms;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: 1;
+	animation-direction: normal;
+}
+
 #show {
-  animation: show 200ms linear forwards 1;
+	animation-name: height-animation;
 }
-.ErrorMessageContainer {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
+#hide {
+	animation-name: height-animation-re;
 }
-.ErrorMessage {
-  width: calc(100% - 10px);
-  font-size: 0.9rem;
-  background-color: #cc2a24;
-  padding: 7px 35px 7px 7px;
-  position: relative;
-  border-radius: 0 0 5px 5px;
+
+.errorMessage {
+	width: calc(100% - 10px);
+	font-size: 0.9rem;
+	background-color: #cc2a24;
+	padding: 7px 35px 7px 7px;
+	position: relative;
+	border-radius: 0 0 5px 5px;
 }
+
 .info {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-@keyframes show {
-  0% {
-    height: 0;
-  }
-  100% {
-    height: 31px;
-  }
+
+@keyframes height-animation {
+	0% {
+		height: 0px;
+	}
+	100% {
+		height: var(--error-message-height);
+	}
 }
-@keyframes hide {
-  0% {
-    height: 31px;
-  }
-  100% {
-    height: 0;
-  }
+@keyframes height-animation-re {
+	0% {
+		height: var(--error-message-height);
+	}
+	100% {
+		height: 0px;
+	}
 }
