--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/AddTags/Components/SelectionFieldWithErrorMessage/SelectionFieldWithErrorMessage.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/AddTags/Components/SelectionFieldWithErrorMessage/SelectionFieldWithErrorMessage.module.css
@@ -3,6 +3,11 @@
 	width: 200px;
 }
 
+.errorBorder {
+	border: 2px solid #cc2a24;
+	border-radius: 4px;
+}
+
 @media only screen and (max-width: 200px) {
 	.selectionField {
 		width: 100%;
