--- a/src/Shared/SelectionField/SelectionField.module.css
+++ b/src/Shared/SelectionField/SelectionField.module.css
@@ -165,6 +165,11 @@
 	transition: background-color 200ms;
 }
 
+.errorBorder {
+	border: 2px solid #cc2a24;
+	border-radius: 4px;
+}
+
 .rotateArrow {
 	width: 12px;
 	height: 12px;
