(headers) font weight fixed

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldDescriptions/GameInfoFieldDescriptions/GameInfoFieldDescriptions.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldDescriptions/GameInfoFieldDescriptions/GameInfoFieldDescriptions.module.css
@@ -1,32 +1,33 @@
 .addGameDescriptions {
-  margin: 3rem 0;
+	margin: 3rem 0;
 }
 .sortDescription {
-  margin: 20px 0;
+	margin: 20px 0;
 }
 
 .buttonContainer {
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .btn,
 .mainBtn {
-  margin-right: 20px;
-  margin-top: 20px;
+	margin-right: 20px;
+	margin-top: 20px;
 }
 .header {
-  font-size: 1.3rem;
+	font-size: 1.3rem;
+	font-weight: 400;
 }
 
 @media only screen and (max-width: 1023px) and (min-width: 769px) {
-  .header {
-    font-size: 1.2rem;
-  }
+	.header {
+		font-size: 1.2rem;
+	}
 }
 
 @media only screen and (max-width: 768px) {
-  .header {
-    font-size: 1rem;
-  }
+	.header {
+		font-size: 1rem;
+	}
 }
