--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldSpecifications/GameInfoFieldSpecifications/GameInfoFieldSpecifications.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldSpecifications/GameInfoFieldSpecifications/GameInfoFieldSpecifications.module.css
@@ -1,23 +1,24 @@
 .addGameSpecifications {
-  margin: 3rem 0;
+	margin: 3rem 0;
 }
 
 .textField {
-  margin-top: 20px;
+	margin-top: 20px;
 }
 
 .header {
-  font-size: 1.3rem;
+	font-size: 1.3rem;
+	font-weight: 400;
 }
 
 @media only screen and (max-width: 1023px) and (min-width: 769px) {
-  .header {
-    font-size: 1.2rem;
-  }
+	.header {
+		font-size: 1.2rem;
+	}
 }
 
 @media only screen and (max-width: 768px) {
-  .header {
-    font-size: 1rem;
-  }
+	.header {
+		font-size: 1rem;
+	}
 }
