--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/GameInfoFieldBanner/GameInfoFieldBanner.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/GameInfoFieldBanner/GameInfoFieldBanner.module.css
@@ -1,28 +1,29 @@
 .addGameBanner {
-  margin: 3rem 0;
+	margin: 3rem 0;
 }
 .btnContainer {
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .btn {
-  margin-right: 10px;
-  margin-top: 30px;
+	margin-right: 10px;
+	margin-top: 30px;
 }
 
 .header {
-  font-size: 1.3rem;
+	font-size: 1.3rem;
+	font-weight: 400;
 }
 
 @media only screen and (max-width: 1023px) and (min-width: 769px) {
-  .header {
-    font-size: 1.2rem;
-  }
+	.header {
+		font-size: 1.2rem;
+	}
 }
 
 @media only screen and (max-width: 768px) {
-  .header {
-    font-size: 1rem;
-  }
+	.header {
+		font-size: 1rem;
+	}
 }
