--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/GameInfoField/GameInfoField.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/GameInfoField/GameInfoField.module.css
@@ -1,12 +1,13 @@
 .addGame {
-  width: 100%;
+	width: 100%;
 }
 .header {
-  font-size: 1.5rem;
+	font-size: 1.5rem;
+	font-weight: 400;
 }
 
 @media only screen and (max-width: 768px) {
-  .header {
-    font-size: 1.2rem;
-  }
+	.header {
+		font-size: 1.2rem;
+	}
 }
