(fileUploadButton-imagePreview) touch screen and also responsiveness added

--- a/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
@@ -96,7 +96,7 @@
 .fileUploadWithPreview {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 10px;
     width: 100%;
 }
 .fileUpload {
@@ -128,5 +128,9 @@
     }
     .focused {
         font-size: 10px;
+    }
+    .fileUploadWithPreview {
+        flex-direction: column;
+        align-items: start;
     }
 }
