(CoverImageVideoContainer) image-preveiw updated

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
@@ -13,8 +13,9 @@
 .disabled {
     opacity: 0.5;
 }
-.marginBot {
+.outerContainer {
     margin-bottom: 10px;
+    position: relative;
 }
 
 .label {
